<resources>
    <string name="appname">Mountcak</string>
    <string name="version">Version 1.0.1</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_rental">Rental</string>
    <string name="title_activity">Activity</string>
    <string name="title_profile">Profile</string>

    <string name="login">Login</string>
    <string name="name">Your Name</string>
    <string name="city">City</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>

    <string name="signup">Sign Up</string>

    <string name="forgot_password">Forgot Your Password ?</string>

    <string name="login_validate">Email or password is wrong, please try again.</string>
    <string name="name_validate">Please fill your full name</string>
    <string name="city_validate">Please fill your current city</string>
    <string name="email_validate">Please fill your email correctly</string>
    <string name="phone_validate">Please fill your phone number correctly</string>
    <string name="password_validate">Password length minimal 8 character</string>
    <string name="general_validate">Please fill this box</string>

    <string name="signup_failed">Sign up failed, Email has been used !</string>

    <string name="done">Done</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about">About</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="logout">Logout</string>

    <string name="reset_password">Reset Password</string>
    <string name="send_email">Enter your email to reset your account password.</string>
    <string name="reset">Reset</string>
    <string name="email_sent">Email for reset password sent. Please check your inbox.</string>
    <string name="email_not_found">Account with that email not found. Please try again with different email.</string>

    <string name="see_more">See More </string>
    <string name="mount_detail">Mountain Detail</string>

    <string name="location">Location</string>
    <string name="height">Height</string>
    <string name="contact">Contact</string>
    <string name="gallery">Gallery</string>
    <string name="view_photo">View Photo</string>
    <string name="view_instagram">View Instagram</string>
    <string name="route">Route</string>

    <string name="access_token">
        pk.eyJ1IjoibHV0aGZpMTEiLCJhIjoiY2psdWVvM3J3MGszaTN3cXA1ODRqcGQ1cSJ9.Kg15RUMGU58Zigp5yJvq3g
    </string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="notification">Notification</string>

    <string name="post_event">Post Event</string>
    <string name="posting">Posting</string>
    <string name="event_posted">Event Posted Successfully</string>
    <string name="posting_fail">Failed to Post Event, Please Try Again!</string>
    <string name="date">Date</string>
    <string name="start_from">Start From</string>
    <string name="until">Until</string>
    <string name="participant">Participant</string>
    <string name="max_participants">Max Participants</string>
    <string name="trip_cost">Trip Cost</string>
    <string name="meeting_location">Meeting Location / Start Point</string>
    <string name="event_desc">Event Description</string>
    <string name="description">Description</string>
    <string name="set">Set</string>
    <string name="event_title">Event Title</string>
    <string name="post">Post</string>
    <string name="trip">Trip</string>
    <string name="free">FREE</string>
    <string name="privacy">Privacy Policy</string>
    <string name="change_photo">Change Photo</string>
    <string name="new_password">New Password</string>
    <string name="retype">Retype New Password</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_hint">Leave blank if you won\'t change your password</string>
    <string name="edit_post">Edit Post</string>

    <string name="participant_count">%1d Participants</string>
    <string name="mount_location">%1s, %2s, %3s</string>
    <string name="type_a_message">Type a message</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="delete_chat">Delete this chat ?</string>
    <string name="read">Read</string>
    <string name="request_join">Request Join</string>
    <string name="chat_organizer">Chat Organizer</string>
    <string name="joined">Joined</string>
    <string name="requested">Requested</string>
    <string name="cancel_join">Cancel join this trip ?</string>
    <string name="declined">Declined</string>
    <string name="accepted">Accepted</string>
    <string name="cancelled">Cancelled</string>
    <string name="delete_post">Delete Post</string>
    <string name="delete_hint">Delete this post ?</string>

    <string name="notification_title">%1s has %2s your request to join %3s trip.</string>
    <string name="favorite">Favorite</string>
    <string name="expired">Expired</string>
    <string name="waiting_list">Waiting List</string>
    <string name="send_message">Send Message</string>
    <string name="instagram">Instagram</string>
    <string name="price_list">Price List</string>
    <string name="open_hour">Open Hour</string>
    <string name="address">Address</string>

    <string name="default_notification_channel_id">mountcak_default_channel</string>
    <string name="result_not_found">Result not found</string>
    <string name="no_trip_found">No Trip Found</string>
    <string name="no_chat_yet">No Chat Yet</string>
    <string name="no_notification_yet">No Notification Yet</string>
    <string name="refresh">Refresh</string>
    <string name="menu">Menu</string>
    <string name="forecast">Weather Forecast</string>
    <string name="user_review">User Review</string>
    <string name="view_all_experience">View All Experience</string>
    <string name="no_experience_found">User Experience Not Found</string>
    <string name="add_experience_hint">Add your review here</string>
    <string name="share">Share</string>
    <string name="experience_posted">Experience posted</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="no_review_yet">No Review Yet</string>


</resources>
