<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_explore"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_rental"
        android:icon="@drawable/ic_shop"
        android:title="@string/title_rental" />

    <item
        android:id="@+id/navigation_activity"
        android:icon="@drawable/ic_notifications"
        android:title="@string/title_activity" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/title_profile" />

</menu>
