<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/about"
        android:icon="@drawable/ic_menu"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/nav_about"
                android:title="@string/about"
                android:icon="@drawable/ic_info"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/nav_feedback"
                android:title="@string/send_feedback"
                android:icon="@drawable/ic_feedback"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/nav_privacy"
                android:title="@string/privacy"
                android:icon="@drawable/ic_security"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_logout"
                app:showAsAction="ifRoom" />

        </menu>
    </item>
</menu>