<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ui.resetpassword.ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="30dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:src="@drawable/logo_white"
            android:contentDescription="@string/login"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:text="@string/reset_password"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMuted"
            android:textAlignment="center"
            android:layout_marginTop="4dp"
            android:layout_marginStart="2dp"
            android:text="@string/send_email"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="14dp"
            android:hint="@string/email"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="12dp"
            android:backgroundTint="@color/colorPrimary"/>

        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/white"
            android:background="@drawable/shape_button"
            android:text="@string/reset"
            android:onClick="resetPassword"/>

        <ProgressBar
            android:id="@+id/progressReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>

    </LinearLayout>
</ScrollView>