<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".ui.addevent.AddEventActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAddEvent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appBar"
            android:background="@color/colorPrimary"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_event"
                android:textColor="@android:color/white"
                android:textSize="@dimen/toolbarText" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted"/>

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_title"
            android:drawablePadding="10dp"
            android:inputType="textMultiLine"
            android:padding="20dp"
            android:textSize="15sp"
            android:background="@android:color/white"
            android:hint="@string/event_title"
            tools:ignore="Autofill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted"/>

        <EditText
            android:id="@+id/etEventDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:drawableStart="@drawable/ic_event_note"
            android:drawablePadding="10dp"
            android:maxLines="10"
            android:padding="20dp"
            android:textSize="15sp"
            android:background="@android:color/white"
            android:hint="@string/event_desc"
            tools:ignore="Autofill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted"/>

        <Spinner
            android:id="@+id/spnMount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="6dp"/>

        <TextView
            android:id="@+id/tvMountLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text=" -"
            android:layout_marginBottom="18dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etDateStart"
                android:layout_width="0dip"
                android:layout_weight="0.8"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_date_start"
                android:drawablePadding="10dp"
                android:background="@android:color/white"
                android:editable="false"
                android:padding="20dp"
                android:textSize="15sp"
                android:hint="@string/start_from"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/btnDateStart"
                android:layout_width="0dip"
                android:layout_weight="0.2"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:onClick="onClick"
                android:textColor="@color/colorPrimary"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/set"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etDateEnd"
                android:layout_width="0dip"
                android:layout_weight="0.8"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_date_end"
                android:drawablePadding="10dp"
                android:background="@android:color/white"
                android:editable="false"
                android:padding="20dp"
                android:textSize="15sp"
                android:hint="@string/until"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/btnDateEnd"
                android:layout_width="0dip"
                android:layout_weight="0.2"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:onClick="onClick"
                android:textColor="@color/colorPrimary"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/set"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/participant"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted"/>

        <EditText
            android:id="@+id/etMaxParticipant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_people"
            android:drawablePadding="10dp"
            android:inputType="number"
            android:padding="20dp"
            android:textSize="15sp"
            android:background="@android:color/white"
            android:hint="@string/max_participants"
            tools:ignore="Autofill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted"/>

        <EditText
            android:id="@+id/etCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_cost"
            android:drawablePadding="10dp"
            android:inputType="number"
            android:padding="20dp"
            android:textSize="15sp"
            android:background="@android:color/white"
            android:hint="@string/trip_cost"
            tools:ignore="Autofill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted"/>

        <EditText
            android:id="@+id/etMeetLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_location"
            android:drawablePadding="10dp"
            android:inputType="textPostalAddress"
            android:padding="20dp"
            android:textSize="15sp"
            android:background="@android:color/white"
            android:hint="@string/meeting_location"
            tools:ignore="Autofill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginBottom="50dp"
            android:background="@color/colorMuted"/>

    </LinearLayout>

</ScrollView>