<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:elevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <ImageView
                android:id="@+id/imgWeather"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/title_home"
                tools:src="@drawable/logo" />

            <TextView
                android:id="@+id/tvLocationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imgWeather"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="Bandung" />

            <TextView
                android:id="@+id/tvCurrentWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imgWeather"
                android:layout_below="@id/tvLocationName"
                android:textColor="@color/colorSemiWhite"
                tools:text="Rainny" />

            <TextView
                android:id="@+id/tvTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@id/btnRefresh"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                tools:text="19C" />

            <ImageButton
                android:id="@+id/btnRefresh"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="2dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/refresh"
                android:background="@drawable/shape_back"
                android:src="@drawable/ic_refresh"/>

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srlHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/defaultBg"
            tools:listitem="@layout/item_event"
            android:paddingTop="8dp"
            android:paddingBottom="60dp"
            android:clipToPadding="false" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableTop="@drawable/ic_empty"
        android:drawablePadding="10dp"
        android:textSize="16sp"
        android:textAlignment="center"
        android:text="@string/no_trip_found"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>